feat(app): everything else
